--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@chakra-ui/react": "^3.21.0",
     "@emotion/react": "^11.14.0",
     "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
     "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
