--- a/package.json
+++ b/package.json
@@ -27,13 +27,16 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-react": "^0.525.0",
+    "next-themes": "^0.4.6",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-imask": "^7.6.1",
     "react-router-dom": "^7.6.3",
     "recharts": "^3.1.0",
+    "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "^4.1.11",
+    "zod": "^4.0.13"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
