--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "slmg-es"
-  }
+    "default": "slmg-es",
+    "slmg": "slmg-es"
+  },
+  "targets": {},
+  "etags": {}
 }
