--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@radix-ui/react-label": "^2.1.7",
     "@radix-ui/react-primitive": "^2.1.3",
     "@radix-ui/react-radio-group": "^1.3.7",
+    "@radix-ui/react-select": "^2.2.5",
     "@radix-ui/react-slot": "^1.2.3",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.11.0",
@@ -46,7 +47,7 @@
     "@types/react-dom": "^19.1.7",
     "@types/react-input-mask": "^3.0.6",
     "@types/react-router-dom": "^5.3.3",
-    "@vitejs/plugin-react": "^4.6.0",
+    "@vitejs/plugin-react": "^4.7.0",
     "eslint": "^9.32.0",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.3",
@@ -57,7 +58,7 @@
     "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "tw-animate-css": "^1.3.5",
-    "typescript": "~5.8.3",
+    "typescript": "^5.9.2",
     "typescript-eslint": "^8.38.0",
     "vite": "^7.0.6",
     "vite-plugin-eslint": "^1.8.1"
