chore: reorganizar arquivos de configuração e remover database não utilizado
- Mover .prettierrc e eslint.config.js para diretório config/
- Mover firestore.rules para config/dev/
- Remover emulador do Realtime Database (não utilizado)
- Atualizar package.json e firebase.json com novos caminhos
- Limpar raiz do projeto para melhor organização"

--- a/firebase.json
+++ b/firebase.json
@@ -2,8 +2,7 @@
   "firestore": {
     "database": "(default)",
     "location": "southamerica-east1",
-    "rules": "firestore.rules",
-    "indexes": "firestore.indexes.json"
+    "rules": "config/dev/firestore.rules"
   },
   "functions": [
     {
@@ -23,12 +22,6 @@
     "ui": {
       "enabled": true
     },
-    "singleProjectMode": true,
-    "database": {
-      "port": 9000
-    }
-  },
-  "database": {
-    "rules": "database.rules.json"
+    "singleProjectMode": true
   }
 }
