--- a/.firebaserc
+++ b/.firebaserc
@@ -1,5 +1,8 @@
 {
   "projects": {
-    "default": "slmg-es"
-  }
+    "default": "sglm-es",
+    "sglm-es": "sglm-es"
+  },
+  "targets": {},
+  "etags": {}
 }
