--- a/functions/package.json
+++ b/functions/package.json
@@ -18,7 +18,8 @@
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "firebase-admin": "^12.6.0",
-    "firebase-functions": "^6.0.1"
+    "firebase-functions": "^6.0.1",
+    "uuid": "^11.1.0"
   },
   "devDependencies": {
     "eslint": "^8.15.0",
