Correçoes rental integração

--- a/firebase.json
+++ b/firebase.json
@@ -30,6 +30,34 @@
         "firebase-debug.*.log",
         "*.local"
       ]
+    },
+    {
+      "source": "sglm-functions",
+      "codebase": "sglm-functions",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
+    },
+    {
+      "source": "sglm-firebase",
+      "codebase": "sglm-firebase",
+      "ignore": [
+        "node_modules",
+        ".git",
+        "firebase-debug.log",
+        "firebase-debug.*.log",
+        "*.local"
+      ],
+      "predeploy": [
+        "npm --prefix \"$RESOURCE_DIR\" run lint"
+      ]
     }
   ],
   "emulators": {
