--- a/.firebaserc
+++ b/.firebaserc
@@ -1,7 +1,8 @@
 {
   "projects": {
-    "default": "sglm-es",
-    "sglm-es": "sglm-es"
+    "default": "slmg-es",
+    "sglm-es": "sglm-es",
+    "sglm-data": "slmg-es"
   },
   "targets": {},
   "etags": {}
