--- a/package.json
+++ b/package.json
@@ -33,10 +33,12 @@
     "axios": "^1.11.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "emailjs-com": "^3.2.0",
     "firebase": "^11.10.0",
     "firebase-admin": "^13.4.0",
     "lucide-react": "^0.525.0",
     "next-themes": "^0.4.6",
+    "pdfmake": "^0.2.20",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.61.1",
@@ -46,11 +48,12 @@
     "sonner": "^2.0.6",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.11",
-    "zod": "^4.0.14"
+    "zod": "^4.0.17"
   },
   "devDependencies": {
     "@eslint/js": "^9.32.0",
     "@types/node": "^24.0.13",
+    "@types/pdfmake": "^0.2.11",
     "@types/react": "^19.1.9",
     "@types/react-dom": "^19.1.7",
     "@types/react-input-mask": "^3.0.6",
