--- a/functions/package.json
+++ b/functions/package.json
@@ -7,7 +7,10 @@
     "shell": "firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "test": "jest --config tests/jest.config.cjs",
+    "test:watch": "jest --config tests/jest.config.cjs --watch",
+    "test:coverage": "jest --config tests/jest.config.cjs --coverage"
   },
   "engines": {
     "node": "22"
@@ -24,7 +27,8 @@
   "devDependencies": {
     "eslint": "^8.15.0",
     "eslint-config-google": "^0.14.0",
-    "firebase-functions-test": "^3.1.0"
+    "firebase-functions-test": "^3.1.0",
+    "supertest": "^7.1.4"
   },
   "private": true
 }
