--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "target": "ESNext",
     "useDefineForClassFields": true,
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
-    "allowJs": false,
+    "allowJs": true,
+    "checkJs": false, // Disable type checking for JS files to avoid strict errors
     "skipLibCheck": true,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true,
@@ -19,7 +20,7 @@
     "paths": {
       "@/*": ["src/*"]
     },
-    "allowImportingTsExtensions": true 
+    //"allowImportingTsExtensions": true 
   },
   "include": ["src"],
   "references": [] // Remove referências a outros tsconfig para evitar erros de composição
